fixed issue with text overflow for StickyNav

--- a/src/component-styles/sticky-nav.css
+++ b/src/component-styles/sticky-nav.css
@@ -39,6 +39,14 @@
     display: flex;
     justify-content: flex-start;
 }
+
+.list-name{
+    width:100%;
+    display:inline-block;
+    text-overflow:ellipsis;
+    white-space:nowrap;
+    overflow:hidden;
+}
 .hide-left-bar li { /* When this bar is hidden, the list elements are ...*/
     color:transparent;
 }
